add variable and root rule to styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,6 @@
+:root{
+    --text-align: center;    
+}
 main{
     max-width: 840px;
 }
@@ -17,7 +20,7 @@ aside{
     padding: 1rem;
     background-color: #eee;
     color: #333;
-    text-align: center;
+    text-align: var(--text-align);
 }
 aside img{
     width: 200px;
@@ -39,5 +42,5 @@ p {
 footer {
     margin-top: 15px;
     border-top: 1px solid black;
-    text-align: center;
+    text-align: var(--text-align);
 }
