--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+* {
+   margin: 0; 
+   padding: 0;
+   box-sizing: border-box;
+}
 :root{
     --text-align: center;    
 }
@@ -11,16 +16,18 @@ nav {
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 10px;
 }
 aside{
+    position: relative;
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
     text-align: var(--text-align);
+}
+aside h2 {
+    position: absolute;
+    top: 25px;
+    left: 70px;
+    color: whitesmoke;
 }
 aside img{
     width: 200px;
@@ -28,19 +35,33 @@ aside img{
 }
 h1 {
     color: darkblue;
+    padding: .5rem;
 }
 main img {
+    float: right;
     width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    margin: 0 0 1rem 1rem;
 }
 p {
-    padding: 0;
+    padding: .5rem;
 }
 footer {
     margin-top: 15px;
     border-top: 1px solid black;
     text-align: var(--text-align);
+}
+/* CSS class selectors */
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2);
+    background-color: #eee;
+    color: #333;
+}
+.indent {
+    padding-left: 2rem;
 }
