--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 :root {
    --primary-color: black;
-   --secondary-color: brown;
+   --secondary-color: lightslategrey;
    --accent1-color: black;
-   --accent2-color: wheat;
+   --accent2-color: white;
    --heading-font: 'Times New Roman', Times, serif;
    --body-font: Arial, Helvetica, sans-serif;
 }
@@ -53,16 +53,16 @@ h1 {
     text-align: center;
     opacity: 0.7;
     background-color: var(--accent1-color);
-    color: white;
+    color: var(--accent2-color);
 }
 h2 {
-    background-color: lightslategrey;
+    background-color: var(--secondary-color);
     padding: 10px;
     text-align: center;
     border-bottom: 1px;
     margin: 20px 0;
 }
-article {
+.hero article {
     position: absolute;
     bottom: 10px;
     background-color: var(--accent1-color);
