complete week 04 code along

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,22 +6,34 @@
 :root{
     --text-align: center;    
 }
-main{
+header, .grid, footer {
     max-width: 840px;
+    margin: 0 auto;
 }
+/* main{
+    max-width: 840px; */
+/* } */
 nav {
     background-color: darkblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 nav a {
     color: white;
     display: block;
     padding: 10px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 aside{
     position: relative;
     width: 20rem;
     text-align: var(--text-align);
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 aside h2 {
     position: absolute;
@@ -36,6 +48,10 @@ aside img{
 h1 {
     color: darkblue;
     padding: .5rem;
+    border-bottom: solid;
+}
+main {
+    grid-column: 2/3;
 }
 main img {
     float: right;
@@ -44,7 +60,7 @@ main img {
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
-    margin: 0 0 1rem 1rem;
+    margin: 1rem;
 }
 p {
     padding: .5rem;
@@ -61,6 +77,10 @@ footer {
     border: 1px solid rgb(0 0 0 / 0.2);
     background-color: #eee;
     color: #333;
+}
+.grid {
+    display: grid;
+    /* align-items: center; */
 }
 .indent {
     padding-left: 2rem;
