--- a/week04/styles/layout-exercises.css
+++ b/week04/styles/layout-exercises.css
@@ -24,18 +24,25 @@ div {
 .flex {
     background-color: #aba;
     /* write declarations here */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
 .grid {
     background-color: #abb;
     /* enter declarations here */
+    display: grid;
+    place-items: center;
 
 }
 
 .container2 {
     /* write declarations here */
-
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .two {
@@ -45,11 +52,14 @@ div {
 
 .container3 {
     /* write declarations here */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 
 }
 
 .columns-3 {
     /* write declaration here */
+    grid-column: 1/4; 
 
 }
 
