--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
-   --primary-color: black;
-   --secondary-color: lightslategrey;
+   --primary-color: #f5f5f5;
+   --secondary-color: #1a1f23;
    --accent1-color: black;
    --accent2-color: white;
    --heading-font: 'Times New Roman', Times, serif;
@@ -23,13 +23,27 @@ h1, h2 {
     font-family: var(--heading-font);
     color: var(--primary-color); 
 }
+ .navigation {
+    display: flex;
+    list-style: none;
+}
+li {
+    flex: 1 1 auto;
+}
 nav, p, article {
     margin: 16px;
     padding: 8px;
 }
 header {
     padding: 10px;
+    display: grid;
+    grid-template-columns: 120px 1fr 1fr;
+    align-items: center;
 }
+
+
+/* #logo{
+} */
 .socialmedia a {
     text-decoration: none;
 }
@@ -57,10 +71,10 @@ h1 {
 }
 h2 {
     background-color: var(--secondary-color);
-    padding: 10px;
+    padding: 5px;
     text-align: center;
-    border-bottom: 1px;
-    margin: 20px 0;
+    /* border-bottom: 1px; */
+    margin: 5px 0;
 }
 .hero article {
     position: absolute;
@@ -77,7 +91,30 @@ h2 {
     box-shadow: 0 0 20px dimgray;
     border: 1px solid;
 }
+.grid1 {
+    display: grid;
+    align-items: center;
+}
+.grid1 h2{
+    grid-column: 1/4;
+}
+.grid1 img {
+    grid-column: 2/3;
+}
+.grid2 {
+    grid-column: 1/2;
+    grid-row: 2;
+}
+.flex {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    font-size: smaller;
+    text-align: center;
+}
 footer {
     text-align: center;
     border-top: 1px dotted;
+    display: flex;
+    justify-content: flex-end;
 }
