--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-   --primary-color: #f5f5f5;
+   --primary-color: white;
    --secondary-color: #1a1f23;
    --accent1-color: black;
    --accent2-color: white;
@@ -37,13 +37,10 @@ nav, p, article {
 header {
     padding: 10px;
     display: grid;
-    grid-template-columns: 120px 1fr 1fr;
+    grid-template-columns: 100px 1fr 1fr;
     align-items: center;
+    border-bottom: 1px dotted;
 }
-
-
-/* #logo{
-} */
 .socialmedia a {
     text-decoration: none;
 }
@@ -73,7 +70,7 @@ h2 {
     background-color: var(--secondary-color);
     padding: 5px;
     text-align: center;
-    /* border-bottom: 1px; */
+    border-bottom: 1px;
     margin: 5px 0;
 }
 .hero article {
@@ -81,7 +78,7 @@ h2 {
     bottom: 10px;
     background-color: var(--accent1-color);
     opacity: 0.7;
-    color: white;
+    color: var(--accent2-color);
     padding: 0;
 }
 .hero article img {
@@ -105,6 +102,7 @@ h2 {
     grid-column: 1/2;
     grid-row: 2;
 }
+
 .flex {
     display: flex;
     justify-content: space-around;
