--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -41,77 +41,6 @@ header {
     align-items: center;
     border-bottom: 1px dotted;
 }
-.form {
-    display: grid;   
-    grid-template-columns: 1fr 1fr;
-}
-form {
-    grid-column: 2/3;
-    padding: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.1);
-    border-radius: 0.5rem;
-}
-input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
-    vertical-align: middle;
-}
-input, textarea {
-    padding: .5rem;
-}
-.form-item {
-    padding: 4px;
-}
-
-.column2 {
-    display: grid;
-    margin: 10px 0;
-}
-.column1 h1 {
-    position: relative;
-}
-.column1 h2 {
-    position: relative;
-    top: 20px;
-    /* text-align: center; */
-    background-color: var(--primary-color);
-    color: black;
-}
-.column1 p {
-    text-align: center;
-}
-label {
-    padding-right: 30px;
-}
-.label1 {
-    padding: 5px;
-}
-form p {
-    margin: 0 auto;
-    padding: 2px;
-}
-button {
-    background-color: rgb(11, 30, 48);
-    color: var(--accent2-color);
-    padding: .5rem;
-    /* margin: 0 auto; */
-    /* display: block; */
-    border-radius: .5rem;
-    width: 400px;
-    border: 1px solid rgb(0 0 0 / 10%);
-}
-button:hover {
-    background-color: rgb(108, 116, 119);
-}
-.map {
-    grid-column: 1/2; 
-    grid-row: 1/2;
-    padding: 10px;
-}
-.map iframe{
-    height: 400px;
-    width: 400px;
-}
 .socialmedia a {
     text-decoration: none;
 }
@@ -186,4 +115,73 @@ footer {
     border-top: 1px dotted;
     display: flex;
     justify-content: flex-end;
+}
+/* contact.html css */
+.form {
+    display: grid;   
+    grid-template-columns: 1fr 1fr;
+}
+form {
+    grid-column: 2/3;
+    padding: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.1);
+    border-radius: 0.5rem;
+}
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+}
+input, textarea {
+    padding: .5rem;
+}
+.form-item {
+    padding: 4px;
+}
+
+.column2 {
+    display: grid;
+    margin: 10px 0;
+}
+.column1 h1 {
+    position: relative;
+}
+.column1 h2 {
+    position: relative;
+    top: 20px;
+    background-color: white;
+    color: black;
+}
+.column1 p {
+    text-align: center;
+}
+label {
+    padding-right: 30px;
+}
+.label1 {
+    padding: 5px;
+}
+form p {
+    margin: 0 auto;
+    padding: 2px;
+}
+button {
+    background-color: rgb(11, 30, 48);
+    color: var(--accent2-color);
+    padding: .5rem;
+    border-radius: .5rem;
+    width: 400px;
+    border: 1px solid rgb(0 0 0 / 10%);
+}
+button:hover {
+    background-color: rgb(108, 116, 119);
+}
+.map {
+    grid-column: 1/2; 
+    grid-row: 1/2;
+    padding: 10px;
+}
+.map iframe{
+    height: 400px;
+    width: 400px;
 }
